# internal/handler/routes.go
@@ -2,6 +2,7 @@ package handler
 
 import (
 	"github.com/gorilla/mux"
+	"github.com/nurbekabilev/go-open-api/internal/handler/employee"
 	"github.com/nurbekabilev/go-open-api/internal/middleware"
 )
 
@@ -18,7 +19,7 @@ func GetRoutes() *mux.Router {
 	protectedRoutes.HandleFunc("/api/v1/positions/{id:[0-9]+}", HandleDeletePosition).Methods("DELETE")
 
 	// Employees @todo
-	// protectedRoutes.HandleFunc("/api/v1/positions", HandleAddPosition).Methods("POST")
+	protectedRoutes.HandleFunc("/api/v1/employees", employee.HandleAddEmployee).Methods("POST")
 	// protectedRoutes.HandleFunc("/api/v1/positions", HandleGetPositions).Methods("GET")
 	// protectedRoutes.HandleFunc("/api/v1/positions/{id:[0-9]+}", HandleGetOnePosition).Methods("GET")
 	// protectedRoutes.HandleFunc("/api/v1/positions/{id:[0-9]+}", HandleDeletePosition).Methods("DELETE")
